Fix some shapes not showing up

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -96,7 +96,7 @@
     height: 200px;
     width: 200px;
     z-index: -10;
-    transform: rotate(-45deg);
+    transform: rotate(-45deg) translate3d(0, 0, 0);
     overflow-x: hidden;
     filter: drop-shadow(0px 0px 15px #92a7f0);
 }
@@ -112,6 +112,7 @@
     width: 120px;
     z-index: -10;
     overflow-x: hidden;
+    transform: translate3d(0, 0, 0);
     filter: drop-shadow(0px 0px 20px #92a7f0);
 }
 
@@ -126,6 +127,7 @@
     width: 200px;
     z-index: -10;
     overflow-x: hidden;
+    transform: translate3d(0, 0, 0);
     filter: drop-shadow(0px 0px 25px #d38ff3);
 }
 
@@ -140,6 +142,7 @@
     width: 200px;
     z-index: -10;
     overflow-x: hidden;
+    transform: translate3d(0, 0, 0);
     filter: drop-shadow(0px 0px 30px #9d1cd9);
 }
 
